# SchwabApi

./: CLAUDE.md  Cargo.toml  README.md
src/: auth.rs  client.rs  error.rs  lib.rs  main.rs  orders.rs  types.rs
src/models/: account.rs  instruments.rs  market_hours.rs  mod.rs  movers.rs  options.rs  orders.rs  price_history.rs  quotes.rs  transactions.rs
src/models/stream/: account_activity.rs  book.rs  chart.rs  level_one.rs  mod.rs  screener.rs
src/stream/: fields.rs  mod.rs  protocol.rs  services.rs
tests/: live.rs  live_read_only.rs
tests/live/: mod.rs  orders.rs  rest.rs  stream.rs  support.rs
