[package]
name = "schwab_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio          = { version = "1", features = ["full"] }
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util   = "0.3"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "2"
url            = "2"
chrono         = { version = "0.4", features = ["serde"] }
tracing        = "0.1"

[dev-dependencies]
tokio          = { version = "1", features = ["full", "test-util"] }
