[package]
name = "schwab_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime and concurrency
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP, WebSocket, and TLS transport
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "rustls", "webpki-roots"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
url = "2"

# Serialization and domain values
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde", "serde-float"] }

# Diagnostics and errors
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
